# youtube-transcript-extractor-contentQ

./: %HOMEPATH%.sshconfig  %HOMEPATH%\.ssh\config  .replit  CLAUDE.md  MANUAL_GITHUB_ISSUES_GUIDE.md  PRD_AI_Content_Generation.md  README.md  TASKS.md  TRANSCRIPT_TASKS.md  create-github-issues.sh  debug-transcript.js  diagnostics_output.json  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  sample_transcript.json  tatus  test-improved-transcript.js  test-specific-video.js  test-transcript-fix.js  test-transcript.js  test-video-processing.js  theme.json  transcript_output.json  validation-summary.md  vitest.config.ts
.claude/: settings.local.json
attached_assets/: GET __id_transcript.md  PRD Content Spark AI.md  Pasted--Music-open-ey-have-just-launched-their-very-first-B2B-agent-it-s-a-sales-agent-they-did-it-all--1738941824545.txt  Pasted--Updated-Understanding-Both-WebView-and-deployment-are-running-in-Replit-but-there-s-a-1740268774272.txt  Pasted--object-Object-object-Object-object-Object-object-Object-object-Object-object-Object-obj-1740110781374.txt  Pasted--use-client-import-React-useState-useEffect-useRef-from-react-import-Input-from--1738933081016.txt  Pasted-0-00-90-of-your-code-roughly-is-written-by-AI-now-The-team-that-works-in-the-most-futuristic-way-1751719012214_1751719012218.txt  Pasted-1-50-52-PM-express-serving-on-port-5000-Browserslist-browsers-data-caniuse-lite-is-9-months-ol-1751723666838_1751723666839.txt  Pasted-3-24-25-AM-express-POST-api-extract-transcript-200-in-1089ms-transcript-success-true-1738985170683.txt  (+16 more)
(+150 files in other folders)
